<resources>
    <string name="app_name">GetLanIpAdressen</string>
    <string name="search_lan_ips">Search LAN IPs</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="id">ID</string>
    <string name="edit">Edit</string>
    <string name="please_wait">Please wait...</string>
    <string name="authorization">Authorization</string>
    <string name="password">Password</string>
    <string name="_0">0</string>
    <string name="add_manuell">Add Manuell</string>
    <string name="add_user">Add User</string>
    <string name="cancel">Cancel</string>
    <string name="kitaplar">Kitaplar</string>
    <string name="group_name">Group Name</string>
</resources>