<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF1FF"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_user"
        android:textAlignment="center"
        android:textColor="#8A828D"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text|textCapSentences"
        android:textColorHint="#8A828D"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="text|textCapSentences"
        android:textColorHint="#8A828D"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edAuthorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authorization"
        android:inputType="numberDecimal"
        android:text="@string/_0"
        android:textSize="24sp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ekleButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="24sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>